--- a/Landfill_site_selection.ipynb
+++ b/Landfill_site_selection.ipynb
@@ -116,8 +116,6 @@
     "    inputlyr = inputds.GetLayer()\n",
     "        \n",
     "    shpdriver = ogr.GetDriverByName('ESRI Shapefile')\n",
-    "#     if os.path.exists(outputBufferfn):\n",
-    "#         shpdriver.DeleteDataSource(outputBufferfn)\n",
     "    outputBufferds = shpdriver.CreateDataSource(outputBufferfn)\n",
     "    bufferlyr = outputBufferds.CreateLayer(outputBufferfn, inputlyr.GetSpatialRef(),\n",
     "                                           geom_type=ogr.wkbPolygon)\n",
@@ -136,6 +134,26 @@
     "        \n",
     "    feature = None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72a423bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for feature in inputlyr:\n",
+    "    ingeom = feature.GetGeometryRef()\n",
+    "    geomBuffer = ingeom.Buffer(bufferDist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70090086",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,16 +232,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.system('''ogr2ogr -sql \"SELECT * FROM merge_roads_Milos WHERE highway='secondary' OR highway='tertiary'\" \\\n",
-    "# Selected_roads.shp  merge_roads_Milos.shp''')\n",
-    "\n",
-    "\n",
     "os.system('''ogr2ogr -sql \"SELECT * FROM merge_roads_Milos \\\n",
     "        WHERE highway='secondary' OR highway='tertiary'\" \\\n",
     "        Produced/Selected_roads.shp  Input_data_Milos/Roads/merge_roads_Milos.shp''')\n",
     "\n",
     "# Buffer for selected_roads (distance 2km)\n",
-    "createBuffer('Produced/Selected_roads.shp', 'Produced/Selected_roads_buffer.shp', 400)\n"
+    "createBuffer('Produced/Selected_roads.shp', 'Produced/Selected_roads_buffer.shp', 400)"
    ]
   },
   {
@@ -246,7 +260,6 @@
     "    ogr2ogr.main([\"\",\"-f\", \"ESRI Shapefile\", \"-append\", \"-update\", 'Produced/merged.shp', \"Produced/towns_buffer.shp\"])\n",
     "    ogr2ogr.main([\"\",\"-f\", \"ESRI Shapefile\", \"-append\", \"-update\", 'Produced/merged.shp', \"Produced/natura_buffer.shp\"])\n",
     "    \n",
-    "#     ogr2ogr -f \"ESRI Shapefile\" merged.shp a.shp+\n",
     "merge()"
    ]
   },
@@ -276,8 +289,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
     "os.system('''ogr2ogr Produced/exclude_dissolved.shp \\\n",
     "Produced/merged.shp -dialect sqlite -sql \"SELECT ST_Union(geometry) AS geometry FROM merged ''')"
    ]
@@ -287,7 +298,7 @@
    "id": "d4438c87",
    "metadata": {},
    "source": [
-    "# Dissolve land uses"
+    "# Dissolve acceptable land uses"
    ]
   },
   {
@@ -348,9 +359,7 @@
     "\n",
     "erase_ds = land_uses_dis_layer.Erase(excluded_areas_dis_layer, erase_Layer)\n",
     "erase_outDataSource = erase_ds = None\n",
-    "\n",
-    "#     bufferlyr = outputBufferds.CreateLayer(outputBufferfn, inputlyr.GetSpatialRef(),\n",
-    "#                                            geom_type=ogr.wkbPolygon)"
+    "towns"
    ]
   },
   {
@@ -478,7 +487,6 @@
    "outputs": [],
    "source": [
     "# read multiparts data\n",
-    "\n",
     "multipart_file = driver.Open('Produced/multiparts.shp', 1)\n",
     "multipart_layer = multipart_file.GetLayer()\n",
     "\n",
